updated README.md screenshot

--- a/shutdown/settings.json
+++ b/shutdown/settings.json
@@ -1,6 +1,6 @@
 {
     "lang": "English",
-    "usingDarkTheme": false,
+    "usingDarkTheme": true,
     "English": {
         "display.version": "Version",
         "settings.title": "Settings",
