--- a/shutdown/default.jsonc
+++ b/shutdown/default.jsonc
@@ -2,6 +2,14 @@
     "lang": "English",
     "usingDarkTheme": false,
     "colors": {
+        //"light-bg": "#f0f0f0"
+        //"light-fg": "#000000"
+        //"light-alt": "#dadada"
+        //"light-select": "#9999ff"
+        //"dark-bg": "#1c1c1c"
+        //"dark-fg": "#f0f0f0"
+        //"dark-alt": "#252525"
+        //"dark-select": "#222299"
         "bg": "#f0f0f0",
         "fg": "#000000",
         "alt": "#dadada",
